--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -103,7 +103,7 @@
       </div>
       <ul class="sub-menu-list">
         <li>
-          <a href="">주문내역목록</a>
+          <a href="/admin/index?path=/admin/customer_orders/orders_list">주문내역목록</a>
         </li>
       </ul>
     </li>
