--- a/src/main/resources/templates/admin/reviews/reviewDetails.html
+++ b/src/main/resources/templates/admin/reviews/reviewDetails.html
@@ -18,7 +18,7 @@
 	    </button>
 
 		<!-- 리뷰 상세 정보 박스 -->
-		<div class="white-frame" style="min-height: 100vh; height:auto;">
+		<div class="white-frame">
 			<div class="text-title">
 				<span th:utext="'리뷰번호 : ' + ${reviewNum}"></span>
 			</div>
