--- a/src/main/resources/templates/admin/reviews/reviews.html
+++ b/src/main/resources/templates/admin/reviews/reviews.html
@@ -6,7 +6,7 @@
 <title>Reviews</title>
 
 <link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
-
+<link rel="stylesheet" href="/admin/common/css/modal.css">
 <!-- DataPicker -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
@@ -90,9 +90,8 @@
 		<div class="modal-content">
 			<p>정말로 삭제하시겠습니까?</p>
 			<div class="modal-footer">
-				<button id="confirm-delete" class="default-btn">Yes</button>
-				&nbsp;
-				<button id="cancel-delete" class="default-btn cancle">No</button>
+				<button id="confirm-delete" class="modal-btn confirm">확인</button>
+				<button id="cancel-delete" class="modal-btn cancel">취소</button>
 			</div>
 		</div>
 	</div>
