--- a/src/main/resources/static/admin/common/css/common.css
+++ b/src/main/resources/static/admin/common/css/common.css
@@ -229,6 +229,19 @@ input[type=text], input[type="number"], select {
    position: relative;
 }
 
+.date-picker {
+   display: flex;
+   flex-direction: row;
+   gap: 10px;
+}
+
+.input-box .placeholder {
+   border: none;
+   height: 30px;
+   font-size: 14px;
+   color: #CCCCCC;
+}
+
 .fa-calendar-days {
    position: absolute;
    font-size: 19px;
@@ -406,7 +419,6 @@ input[type='number'] {
 
 .search-list-subject {
    width: 100px;
-   font-size: 16px;
 }
 
 .table-data-cnt-txt {
