--- a/src/main/resources/static/admin/reviews/css/reviews.css
+++ b/src/main/resources/static/admin/reviews/css/reviews.css
@@ -50,12 +50,6 @@ table.dataTable tbody tr {
    margin-right: 60px;
 }
 
-.date-picker {
-   display: flex;
-   flex-direction: row;
-   gap: 10px;
-}
-
 .input-box {
    display: flex;
    align-items: center;
@@ -67,12 +61,6 @@ table.dataTable tbody tr {
    border-radius: 5px;
 }
 
-.input-box .placeholder {
-   border: none;
-   height: 30px;
-   font-size: 14px;
-   color: #CCCCCC;
-}
 
 /*
 .date-option.active {
@@ -141,39 +129,6 @@ table.dataTable tbody tr {
   'GRAD' 0,
   'opsz' 24
 }
-/* 모달 스타일 추가 */
-.modal {
-	display: none; /* 초기에는 숨김 */
-	position: fixed;
-	z-index: 1000;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.4); /* 블랙 w/ opacity */
-}
-
-.modal-content {
-	background-color: #fefefe;
-	margin: 15% auto; /* 상하 좌우 가운데 정렬 */
-	padding: 20px;
-	border: 1px solid #888;
-	width: 30%;
-	border-radius: 8px;
-}
-
-.modal-footer {
-	display: flex;
-	justify-content: center;
-	align-items:center;
-	padding-top: 10px;
-}
-
-.modal-footer .button {
-	margin-left: 5px;
-}
-
 
 /* Center the DataTable pagination controls */
 #reviews_wrapper>.dt-paging {
@@ -196,12 +151,10 @@ table.dataTable tbody tr {
 
 }
 .text-group {
-	display: flex;
-	flex-direction: row;
+	display: grid;
+	grid-template-columns: 100px 1fr;
 	align-items: center;
 	gap: 10px;
-	border-bottom: 1px solid #D8D8D8;
-	margin-bottom: 30px;
-	margin-top: 10px;
-	padding-bottom: 20px;
+	border-bottom: 1px solid #C0C0C0;
+	padding: 20px 20px;
 }
