Feat: 주문 상세 페이지 추가

--- a/src/main/resources/templates/admin/customer_orders/orders_list.html
+++ b/src/main/resources/templates/admin/customer_orders/orders_list.html
@@ -97,7 +97,7 @@
 				<thead>
 					<tr>
 						<th>
-							<input type="checkbox" id="select-all" class="">
+							<input type="checkbox" id="select-all" class="checkbox">
 							<label for="select-all"></label>
 						</th>
 						<th>NO</th>
