--- a/src/main/resources/static/admin/common/css/common.css
+++ b/src/main/resources/static/admin/common/css/common.css
@@ -214,7 +214,7 @@ input:focus {
    box-shadow: none;
 }
 
-input[type=text], input[type="number"], select {
+input[type=text], input[type="number"], input[type="password"], select {
    height: 40px;
    border: 1px solid #c0c0c0;
    border-radius: 5px;
