--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -58,7 +58,7 @@
       </div>
       <ul class="sub-menu-list">
         <li>
-          <a href="">매니저목록조회</a>
+          <a href="/admin/index?path=admin/managers/managers">매니저목록조회</a>
         </li>
         <li>
           <a href="">매니저등록</a>
