--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -3,20 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- <link rel="stylesheet" href="https://cdn.datatables.net/2.1.4/css/dataTables.bulma.css"> -->
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/1.0.1/css/bulma.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/admin/common/css/style.css">
-<link rel="stylesheet" href="/admin/common/css/reset.css">
-<link rel="stylesheet" href="/admin/common/css/common.css">
- <!-- 폰트어썸 -->
- <script src="https://kit.fontawesome.com/d95a86acc3.js" crossorigin="anonymous"></script>
- <!-- 구글 아이콘 -->
- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
+<!-- css 연결 -->
+<link rel="stylesheet" href="/admin/common/css/reset.css">
+<link rel="stylesheet" href="/admin/common/css/style.css">
+<link rel="stylesheet" href="/admin/common/css/common.css">
+
+<!-- 폰트 -->
+<link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet">
+
+<!-- 폰트어썸 -->
+<script src="https://kit.fontawesome.com/d95a86acc3.js" crossorigin="anonymous"></script>
+<!-- 구글 아이콘 -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<!-- DatePicker -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 <title>BOOKSTORE 관리자</title>
 </head>
