Feat: 헤더, 사이드메뉴 일부 수정

--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <ul class="sub-menu-list">
-        <li>
+        <li class="sub-menu-item" data-sub-menu-id="submenu1">
           <a href="/admin/index?path=admin/members/members">회원목록조회</a>
         </li>
       </ul>
@@ -57,8 +57,8 @@
         </div>
       </div>
       <ul class="sub-menu-list">
-        <li>
-          <a href="">매니저목록조회</a>
+        <li class="sub-menu-item" data-sub-menu-id="submenu2">
+          <a href="/admin/index?path=admin/managers/managers">매니저목록조회</a>
         </li>
         <li>
           <a href="">매니저등록</a>
@@ -81,7 +81,7 @@
         </div>
       </div>
       <ul class="sub-menu-list">
-        <li>
+        <li class="sub-menu-item" data-sub-menu-id="submenu3">
           <a href="">상품목록조회</a>
         </li>
       </ul>
@@ -102,8 +102,8 @@
         </div>
       </div>
       <ul class="sub-menu-list">
-        <li>
-          <a href="/admin/index?path=/admin/customer_orders/orders_list">주문내역목록</a>
+        <li class="sub-menu-item" data-sub-menu-id="submenu4">
+          <a href="">주문내역목록</a>
         </li>
       </ul>
     </li>
@@ -123,13 +123,13 @@
         </div>
       </div>
       <ul class="sub-menu-list">
-        <li>
+        <li class="sub-menu-item" data-sub-menu-id="submenu5">
           <a href="">발주내역</a>
         </li>
-        <li>
+        <li class="sub-menu-item" data-sub-menu-id="submenu6">
           <a href="">입출고내역</a>
         </li>
-        <li>
+        <li class="sub-menu-item" data-sub-menu-id="submenu7">
           <a href="">창고재고조회</a>
         </li>
       </ul>
@@ -150,17 +150,17 @@
         </div>
       </div>
       <ul class="sub-menu-list">
-        <li>
+        <li class="sub-menu-item" data-sub-menu-id="submenu8">
           <a href="">배너관리</a>
         </li>
-        <li>
+        <li class="sub-menu-item" data-sub-menu-id="submenu9">
           <a href="">공지글관리</a>
         </li>
         <li>
           <a href="/admin/index?path=admin/reviews/reviews">리뷰조회</a>
         </li>
-        <li>
-          <a href="/admin/index?path=admin/inquiries/inquiries">1:1 문의</a>
+        <li class="sub-menu-item" data-sub-menu-id="submenu10">
+          <a href="">1:1 문의</a>
         </li>
       </ul>
     </li>
