--- a/src/main/resources/static/admin/common/css/style.css
+++ b/src/main/resources/static/admin/common/css/style.css
@@ -28,6 +28,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .menu-content {
@@ -110,6 +111,7 @@
 .sub-menu-list li {
   height: 35px;
   padding-left: 50px;
+  cursor: pointer;
 }
 
 .sub-menu-list li a {
