Feat : 매니저  dept 변경 기능 추가

--- a/src/main/resources/static/admin/members/css/members.css
+++ b/src/main/resources/static/admin/members/css/members.css
@@ -32,9 +32,8 @@ table.dataTable tbody tr {
 }
 
 #members td, #members th {
-   text-align: center; /* 텍스트 가운데 정렬 */
-   vertical-align: middle; /* 수직 가운데 정렬 */
+   text-align: center;
+   vertical-align: middle; 
 }
-
 
 
