--- a/src/main/resources/templates/admin/members/members.html
+++ b/src/main/resources/templates/admin/members/members.html
@@ -71,6 +71,8 @@
 
 	<!-- 이곳에 내가 받을 값들의 컬럼을 적어준다 -->
 	<div class="table-container white-frame">
+		<span id="total-row" class="table-column-head-txt"></span>
+		<div><br></div>
 		<table id="member" class="table is-striped" style="width: 100%">
 			<thead>
 				<tr>
