--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -61,7 +61,7 @@
           <a href="/admin/index?path=admin/managers/managers">매니저목록조회</a>
         </li>
         <li>
-          <a href="">매니저등록</a>
+          <a href="/admin/index?path=admin/managers/managerReg">매니저등록</a>
         </li>
       </ul>
     </li>
