--- a/src/main/resources/templates/admin/reviews/reviewDetails.html
+++ b/src/main/resources/templates/admin/reviews/reviewDetails.html
@@ -20,31 +20,31 @@
 		<!-- 리뷰 상세 정보 박스 -->
 		<div class="white-frame">
 			<div class="text-title">
-				<span th:utext="'리뷰번호 : ' + ${reviewNum}"></span>
+				<span th:utext="'리뷰번호 : ' + ${reviews.review_num}"></span>
 			</div>
 			<div class="text-group">
 				<span class="search-list-subject">작성자</span>
-				<span th:text="${memberId}"></span>
+				<span th:text="${reviews.member_id}"></span>
 			</div>
 			<div class="text-group">
 				<span class="search-list-subject">작성일</span>
-				<span th:text="${reviewWriteDate}"></span>
+				<span th:text="${#dates.format(reviews.review_write_date, 'YYY-MM-dd HH:mm')}"></span>
 			</div>
 			<div class="text-group">
 				<span class="search-list-subject">책 제목</span>
-				<span th:text="${bookName}"></span>
+				<span th:text="${reviews.book_name}"></span>
 			</div>
 			<div class="text-group">
 				<span class="search-list-subject">ISBN</span>
-				<span th:text="${bookIsbn}"></span>
+				<span th:text="${reviews.book_isbn}"></span>
 			</div>
 			<div class="text-group">
 				<span class="search-list-subject">별점</span>
-				<span id="starRating" th:data-rating="${reviewRating}"></span>
+				<span id="starRating" th:data-rating="${reviews.review_rating}"></span>
 			</div>
 			<div class="text-group">
 				<span class="search-list-subject">내용</span>
-				<span th:text="${reviewContent}"></span>
+				<span th:text="${reviews.review_content}"></span>
 			</div>
 		</div>
 	</div>
