--- a/src/main/resources/templates/admin/reviews/reviews.html
+++ b/src/main/resources/templates/admin/reviews/reviews.html
@@ -48,7 +48,7 @@
 						<option value="5">회원ID</option>
 						<option value="3">책 제목</option>
 						<option value="4">ISBN</option>
-						<option value="6">별점</option>
+						<option value="7">별점</option>
 					</select>
 					<div class="select-arrow-down"></div>
 				</div>
@@ -64,8 +64,10 @@
 	</div>
 
 	<div class="table-container white-frame">
-		<span id="total-row" class="table-column-head-txt" style="margin-left: 10px;"></span>
-		<button id="delete-button" class="button is-danger" style="float: right; margin-bottom: 16px;">삭제</button>
+		<div class="table-total-row">
+			<span id="total-row" class="table-column-head-txt" style="margin-left: 10px;"></span>
+			<button id="delete-button" class="button is-danger" style="float: right; margin-bottom: 16px;">삭제</button>
+		</div>
 		<table id="reviews" class="table is-striped" style="width: 100%">
 			<thead>
 				<tr>
